--- a/src/Coevery.Web/Core/OptionSet/Views/Fields/OptionSetField.cshtml
+++ b/src/Coevery.Web/Core/OptionSet/Views/Fields/OptionSetField.cshtml
@@ -1,10 +1,9 @@
-﻿@using Coevery.Core.OptionSet.Models
-@{
-    var optionItems = (IEnumerable<OptionItemPart>)Model.OptionItems;
-    string name = @Model.ContentField.DisplayName;
+﻿@{
+    string name = Model.ContentField.DisplayName;
+    string value = Model.ContentField.Value;
 }
 
 <span class="control-label">@T(name)</span>
 <div class="controls">
-    <span class="control-text">@(new HtmlString(string.Join(", ", optionItems.Select(t => t.Name).ToArray())))</span>
+    <span class="control-text">@T(value)</span>
 </div>
