--- a/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/PartsEditView.tt
+++ b/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/PartsEditView.tt
@@ -1,12 +1,25 @@
 ﻿<#@ template debug="false" hostspecific="true" language="C#" #>
+<#@ include file="EntityDefinition.ttinclude" #>
 <#@ assembly name="Coevery.DeveloperTools" #>
 <#@ assembly name="System.Core" #>
 <#@ parameter type="System.String" name="EntityName" #>
 <#@ parameter type="System.Collections.Generic.IList<Coevery.DeveloperTools.FormDesigner.Models.Section>" name="SectionList" #>
 <#@ import namespace="System.Linq" #>
+<#@ import namespace="Coevery.Core.Relationships.Settings" #>
 @using Coevery.Utility.Extensions
+@using Coevery.ContentManagement
 @{
     var id = Guid.NewGuid().ToString();
+	ContentPart part = Model.ContentPart;
+<#	
+	var partDefinition = GetContentPartDefinition(EntityName);
+    var fields = partDefinition.Fields.Where(f => f.FieldDefinition.Name == "ReferenceField").ToList();
+	if (fields.Count > 0) {
+            foreach (var field in fields) {
+                var fieldName = field.Name;#>
+	part.SetFieldParameter("<#=fieldName#>", new { DropdownUrl = Url.Action("<#=fieldName #>Dropdown", "<#=EntityName #>")});
+<# } #>
+<# } #>
 }
 <div class="row-fluid edit-mode">
 	@using (Html.BeginFormAntiForgeryPost(Url.Action("Edit", "<#=EntityName #>" , new { id = Model.ContentItem.Id, returnUrl = Request.QueryString["ReturnUrl"]}),
