--- a/src/Coevery.Web/DeveloperTools/FormDesigner/Views/Admin/Index.cshtml
+++ b/src/Coevery.Web/DeveloperTools/FormDesigner/Views/Admin/Index.cshtml
@@ -1,7 +1,9 @@
-﻿@using Coevery.DeveloperTools.FormDesigner.Models
+﻿@using Coevery.ContentManagement
+@using Coevery.DeveloperTools.FormDesigner.Models
 @{
     Style.Include("formdesigner.css");
     IList<Section> sectionList = Model.Layout;
+    ContentPart contentPart = Model.ContentPart;
 }
 @Display.StylesheetLinks()
 
@@ -122,8 +124,11 @@
         </div>
     </div>
 </section>
-@foreach (var field in Model.ContentPart.Fields) {
+@foreach (var field in contentPart.Fields) {
     var template = field.Name + ".html";
+    if (field.FieldDefinition.Name == "ReferenceField") {
+        contentPart.SetFieldParameter(field.Name, new { HideGrid = true });
+    }
     <script type="text/ng-template" id="@template">
     @Display.DisplayFieldEditor(part: Model.ContentPart, fieldName: field.Name)
     </script>
